kubernetes/leave/leave-mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: leave-mongodb
  namespace: final
spec:
  serviceName: leave-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: leave-mongodb
  template:
    metadata:
      labels:
        app: leave-mongodb
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: mongodb
          image: mongo:4.0.13
          imagePullPolicy: 'IfNotPresent'
          ports:
            - name: peer
              containerPort: 27017
          command:
            - mongod
          args:
            - --config=/data/configdb/mongod.conf
            - --dbpath=$(DATA_PATH)
            - --replSet=$(REPLICA_SET)
            - --port=$(PORT)
            - --bind_ip=0.0.0.0
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          volumeMounts:
            - name: datadir
              mountPath: /data/db
            - name: configdir
              mountPath: /data/configdb
            - name: workdir
              mountPath: /work-dir
      volumes:
        - name: config
          configMap:
            name: leave-mongodb-config
        - name: workdir
          emptyDir: {}
        - name: init
          configMap:
            defaultMode: 0755
            name: leave-mongodb-init
        - name: configdir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: '1Gi'
---
# Headless service for DNS record
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: 'true'
  name: leave-mongodb
  namespace: final
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: peer
      port: 27017
  selector:
    app: leave-mongodb
